# zkp-vote

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  USAGE.md  design.md
blockchain/: README.md  hardhat.config.js  package.json
blockchain/contracts/: Vote.sol
blockchain/scripts/: deploy.js
blockchain/src/: blockchain-interface.ts  event-logger.ts  relayer.ts  vote-result-manager.ts  zkp-manager.ts
blockchain/test/: blockchain-interface.test.ts  vote.test.js
frontend/: docs.md  middleware.ts  package.json  tailwind.config.js
frontend/__tests__/: security.test.ts
frontend/lib/: anon-network.ts  auth.ts  security.ts
frontend/pages/: index.tsx  results.tsx
frontend/pages/api/: results.ts  vote.ts
src/: lib.rs  main.rs  test.rs  web.rs
